fix bug in sold/bought dashboard

--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -77,21 +77,19 @@
               <mat-card-title>{{sold.title}}</mat-card-title>
               <mat-card-content>
                 <p>Price at point of sale: {{sold.pointOfSalePrice}}</p>
-                <p>Delivery Address: {{sold.deliveryAddress}}</p>
-                <button class="btn btn-lg" (click)="onChange()">Change to available</button>
+                <button class="btn btn-sm btn-light" (click)="onChange()">Change to available</button>
               </mat-card-content>
             </mat-card>
           </div>
         </div>
         <div class="col">
           <h2 style="margin-top: 10px">Your Hire Offers</h2>
-          <div *ngFor="let sold of soldOffers | async">
+          <div *ngFor="let sold of soldOffers | async" style="float:left">
             <mat-card style="width: 300px;" *ngIf="sold.type == 'Hire'">
               <mat-card-title>{{sold.title}}</mat-card-title>
               <mat-card-content>
                 <p>Price at point of sale: {{sold.pointOfSalePrice}}</p>
-                <p>Delivery Address: {{sold.deliveryAddress}}</p>
-                <button class="btn btn-lg" (click)="onChange()">Change to available</button>
+                <button class="btn btn-sm btn-light" (click)="onChange()">Change to available</button>
               </mat-card-content>
             </mat-card>
           </div>
@@ -114,25 +112,27 @@
             </mat-card>
           </div>
         </div>
-        <div class="col"></div>
-        <h2 style="margin-top: 10px">Offers you lent</h2>
-        <div *ngFor="let bought of boughtOffers | async">
-          <mat-card style="width: 300px;" *ngIf="bought.type == 'Lent'">
-            <mat-card-title>{{bought.title}}</mat-card-title>
-            <mat-card-content>
-              <p>Price at point of sale: {{bought.pointOfSalePrice}}</p>
-            </mat-card-content>
-          </mat-card>
+        <div class="col">
+          <h2 style="margin-top: 10px">Offers you lent</h2>
+          <div *ngFor="let bought of boughtOffers | async">
+            <mat-card style="width: 300px;" *ngIf="bought.type == 'Lent'">
+              <mat-card-title>{{bought.title}}</mat-card-title>
+              <mat-card-content>
+                <p>Price at point of sale: {{bought.pointOfSalePrice}}</p>
+              </mat-card-content>
+            </mat-card>
+          </div>
         </div>
-        <div class="col"></div>
-        <h2 style="margin-top: 10px">Offers you hired</h2>
-        <div *ngFor="let bought of boughtOffers | async">
-          <mat-card style="width: 300px;" *ngIf="bought.type == 'Hire'">
-            <mat-card-title>{{bought.title}}</mat-card-title>
-            <mat-card-content>
-              <p>Price at point of sale: {{bought.pointOfSalePrice}}</p>
-            </mat-card-content>
-          </mat-card>
+        <div class="col">
+          <h2 style="margin-top: 10px">Offers you hired</h2>
+          <div *ngFor="let bought of boughtOffers | async">
+            <mat-card style="width: 300px;" *ngIf="bought.type == 'Hire'">
+              <mat-card-title>{{bought.title}}</mat-card-title>
+              <mat-card-content>
+                <p>Price at point of sale: {{bought.pointOfSalePrice}}</p>
+              </mat-card-content>
+            </mat-card>
+          </div>
         </div>
       </div>
     </mat-tab>
