add category-catalog and functionality to category-icons

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -11,46 +11,46 @@
     all
   </button>
   <div class="dropdown-menu scrollable-menu">
-    <a class="dropdown-item">Accessories</a>
-    <a class="dropdown-item">Audio & TV</a>
-    <a class="dropdown-item">Books</a>
-    <a class="dropdown-item">Clothing</a>
-    <a class="dropdown-item">Electronics</a>
-    <a class="dropdown-item">Games</a>
-    <a class="dropdown-item">Animals</a>
-    <a class="dropdown-item">Classes & Tutoring</a>
-    <a class="dropdown-item">Computer & Mobile Phones</a>
-    <a class="dropdown-item">Household & Cleaning</a>
-    <a class="dropdown-item">Moving & Transport</a>
-    <a class="dropdown-item">Party & Catering</a>
+    <a class="dropdown-item" href="/catalog/Accessories">Accessories</a>
+    <a class="dropdown-item" href="/catalog/AudioTv">Audio & TV</a>
+    <a class="dropdown-item" href="/catalog/Books">Books</a>
+    <a class="dropdown-item" href="/catalog/Clothing">Clothing</a>
+    <a class="dropdown-item" href="/catalog/Electronics">Electronics</a>
+    <a class="dropdown-item" href="/catalog/Games">Games</a>
+    <a class="dropdown-item" href="/catalog/Animals">Animals</a>
+    <a class="dropdown-item" href="/catalog/ClassesTutoring">Classes & Tutoring</a>
+    <a class="dropdown-item" href="/catalog/ComputerMobilePhones">Computer & Mobile Phones</a>
+    <a class="dropdown-item" href="/catalog/HouseholdCleaning">Household & Cleaning</a>
+    <a class="dropdown-item" href="/catalog/MovingTransport">Moving & Transport</a>
+    <a class="dropdown-item" href="/catalog/PartyCatering">Party & Catering</a>
   </div>
   </div>
   </h1>
 
   <div class="all-icons row">
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/toast.png" alt="toast-icon"><small>Party & Catering</small></a>
+      <a class="icon-link" href="/catalog/PartyCatering"><img class="icon" src="assets/icons/toast.png" alt="toast-icon"><small>Party & Catering</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/shirt.png" alt="shirt-icon"><small>Clothing</small></a>
+      <a class="icon-link" href="/catalog/Clothing"><img class="icon" src="assets/icons/shirt.png" alt="shirt-icon"><small>Clothing</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/gamepad.png" alt="shirt-icon"><small>Games</small></a>
+      <a class="icon-link" href="/catalog/Games"><img class="icon" src="assets/icons/gamepad.png" alt="gamepad-icon"><small>Games</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/library.png" alt="shirt-icon"><small>Books</small></a>
+      <a class="icon-link" href="/catalog/Books"><img class="icon" src="assets/icons/library.png" alt="library-icon"><small>Books</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/mouse.png" alt="shirt-icon"><small>Electronics</small></a>
+      <a class="icon-link" href="/catalog/Electronics"><img class="icon" src="assets/icons/mouse.png" alt="mouse-icon"><small>Electronics</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/truck.png" alt="shirt-icon"><small>Moving & Transport</small></a>
+      <a class="icon-link" href="/catalog/MovingTransport"><img class="icon" src="assets/icons/truck.png" alt="truck-icon"><small>Moving & Transport</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/blackboard.png" alt="shirt-icon"><small>Classes & Tutoring</small></a>
+      <a class="icon-link" href="/catalog/ClassesTutoring"><img class="icon" src="assets/icons/blackboard.png" alt="blackboard-icon"><small>Classes & Tutoring</small></a>
     </div>
     <div class="icon-div col">
-      <a class="icon-link" href=""><img class="icon" src="assets/icons/vacuum-cleaner.png" alt="shirt-icon"><small>Household & Cleaning</small></a>
+      <a class="icon-link" href="/catalog/HouseholdCleaning"><img class="icon" src="assets/icons/vacuum-cleaner.png" alt="vacuum-icon"><small>Household & Cleaning</small></a>
     </div>
   </div>
 
