changed more button colors and navbar

--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -1,7 +1,7 @@
 <hr>
 <h1 style="float:left">Welcome {{user}}!</h1>
   <h2>
-    <a routerLink="/search" style="float:right; color: #68b0ab"><i class="fas fa-search"></i> Search</a>
+    <button type="button" class="btn btn-md" routerLink="/search" style="float:right; background-color: rgba(116, 153, 255, 0.658); color: rgb(255, 255, 255);"><i class="fas fa-search"></i> Search</button>
   </h2>
   <div style="clear:left;"></div>
 
