--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light" style="background-color: rgba(226, 226, 219, 0)">
+<nav class="navbar fixed-top navbar-expand-lg navbar-light" style="margin-left: 12%; margin-right: 12%; background-color: rgba(59, 59, 59, 0.055)">
   <a class="navbar-brand" routerLink="/">Team 10</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
