add close link to change-function in product-item

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -67,6 +67,7 @@
                             [productStatus]="product.status"
                             [product]="product" >
         </app-product-update>
+        <a [hidden]="!change" (click)="change=false" style="float: right; text-decoration-line: underline">Close</a>
       </div>
     </div>
   </div>
