made the expansion panel flat

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -17,7 +17,8 @@
       <div class="card-description">
       <div style="margin-bottom: 10px">
         <mat-accordion>
-          <mat-expansion-panel (opened)="panelOpenState = true"
+          <mat-expansion-panel class="mat-elevation-z0"
+                               (opened)="panelOpenState = true"
                                (closed)="panelOpenState = false">
             <mat-expansion-panel-header>
               <mat-panel-title>
