--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.css
@@ -1,1 +1,11 @@
 
+.mat-card{
+    width: 70%;
+    height: auto;
+    display: block;
+    margin-top: 1rem;
+    margin-left:auto;
+    margin-right:auto;
+    background-color: white;
+    border-radius: 1rem;
+  }
