--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -2,7 +2,8 @@
 <div style="margin-top: 10px">
   <h1>Profile - {{getUserName()}}</h1>
 </div>
-<mat-tab-group>
+<mat-card>
+  <mat-tab-group>
     <mat-tab label="User Information"> <div *ngFor="let user of userInfo | async">
       <div class="row">
         <div class="col-lg-4">
@@ -154,3 +155,5 @@
       </div>
     </mat-tab>
 </mat-tab-group>
+</mat-card>
+
