Revert "implement toastr notifications, remove secure endpoint"
This reverts commit b6fe900b706cff31a741091b89e36885b88ee916.

--- a/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
@@ -17,6 +17,11 @@
   </div>
 </mat-card>
 
+<mat-card>
+  <button mat-flat-button color="primary" (click)="accessSecuredEndpoint()">Access Secure Endpoint (only for logged in users)</button>
+  {{ secureEndpointResponse }}
+</mat-card>
+
 <mat-card *ngIf="isAdmin">
   <div>
     You are an administrator
