--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -5,12 +5,12 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="navbar-nav ml-auto">
-      <a class="nav-link" routerLink="/admin" [hidden]='!isAdmin()'><i class="far fa-user"></i> Admin</a>
-      <a class="nav-link" routerLink="/createOffer" *ngIf='isLoggedIn()'><i class="fas fa-plus"></i> Create Offer</a>
-      <a class="nav-link" [routerLink]="['/profile', getUserName()]" *ngIf="!isAdmin() && isLoggedIn()"><i class="far fa-user"></i> My Profile</a>
-      <a class="nav-link" routerLink="/login" [hidden]='isLoggedIn()'>Login</a>
-      <a class="nav-link" routerLink="/login" [hidden]='!isLoggedIn()'>Logout</a>
-      <a class="nav-link" routerLink="/register" [hidden]='isLoggedIn()'>Register</a>
+      <a class="nav-link" routerLink="/admin" [hidden]='!(isAdmin | async)'><i class="far fa-user"></i> Admin</a>
+      <a class="nav-link" routerLink="/createOffer" *ngIf='loggedIn | async'><i class="fas fa-plus"></i> Create Offer</a>
+      <a class="nav-link" [routerLink]="['/profile', getUserName()]" *ngIf="!(isAdmin | async) && (loggedIn | async)"><i class="far fa-user"></i> My Profile</a>
+      <a class="nav-link" routerLink="/login" [hidden]='loggedIn | async'>Login</a>
+      <a class="nav-link" (click)="onLogout()" [hidden]='!(loggedIn | async)'>Logout</a>
+      <a class="nav-link" routerLink="/register" [hidden]='loggedIn | async'>Register</a>
     </div>
   </div>
 </nav>
