--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -54,7 +54,7 @@
 
      </div>
       <hr>
-      <button type="button" class="btn btn-md btn-info" *ngIf="(userId | async) != product.userId.toString() && (userId | async) != null && product.status == true && !(isAdmin | async)" (click)="openPurchaseDialog()" style="float:right">Buy</button>
+      <button type="button" class="btn btn-md btn-info" *ngIf="(userId | async) != product.userId.toString() && (loggedIn | async) && product.status == true && !(isAdmin | async)" (click)="openPurchaseDialog()" style="float:right">Buy</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="((userId | async)==product.userId.toString())" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && (isAdmin | async))" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="(isAdmin | async) && !product.approved" (click)="onApprove()" style="float:right">Approve</button>
