made the titles h1

--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -1,6 +1,7 @@
+<hr>
 <mat-card>
   <form [(formGroup)]="createOfferForm" (ngSubmit)="onSubmit()">
-    <div class="createOffer">Create Offer</div>
+    <h1>Create Offer</h1>
     <div>
       <div>
         <mat-form-field appearance="fill">
