--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.css
@@ -3,9 +3,32 @@
     width: 70%;
     height: auto;
     display: block;
-    margin-top: 1rem;
+    margin-top: 4rem;
     margin-left:auto;
     margin-right:auto;
     background-color: white;
     border-radius: 1rem;
   }
+
+  @media (max-width: 1024px){
+
+
+    body{
+      margin-left: 5%;
+      margin-right: 5%;
+    }
+  
+    .mat-card{
+      width: 95%;
+      height: auto;
+      display: block;
+      margin-top: 5rem;
+      margin-left:auto;
+      margin-right:auto;
+      background-color: white;
+      border-radius: 1rem;
+    }
+  
+  
+  }
+  
