--- a/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.css
@@ -1,14 +1,11 @@
 .mat-card{
-  width: 450px;
+  width: 500px;
   display: block;
+  margin-top: 4rem;
   margin-left:auto;
   margin-right:auto;
-  vertical-align:middle;
+  background-color: white;
+  border-radius: 1rem;
 }
 
-.log{
-  font-size: 2rem;
-  font-weight: bold;
-  margin-bottom: 20px;
-}
 
