--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -3,7 +3,6 @@
 <div>
   <h1>Profile - {{getUserName()}}</h1>
 </div>
-
   <mat-tab-group>
     <mat-tab label="User Information"> <div *ngFor="let user of userInfo | async">
       <div class="row">
@@ -66,7 +65,7 @@
     </mat-tab>
 
     <mat-tab label="Sold">
-      <h2 style="color: #68b0ab">Please delete Products you sold and update Services and Products you lent in "Your Offers".</h2>
+      <h2 style="color: rgba(114, 114, 114, 0.658)">Please delete Products you sold and update Services and Products you lent in "Your Offers".</h2>
       <div class="row">
         <div class="col">
           <h2 style="margin-top: 10px">Your Sold Offers</h2>
@@ -157,4 +156,3 @@
     </mat-tab>
 </mat-tab-group>
 </mat-card>
-
