removed the horizontal scrollbar in profile component

--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -4,11 +4,11 @@
   <h1>Profile - {{getUserName()}}</h1>
 </div>
   <mat-tab-group>
-    <mat-tab label="User Information"> <div *ngFor="let user of userInfo | async">
+    <mat-tab label="User Information"> <div *ngFor="let user of userInfo | async"  style="padding: 1rem">
       <div class="row">
         <div class="col-lg-4">
           <h2 style="margin-top: 10px">Account Details</h2>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 100%;">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">Email: {{user.email}}</li>
               <li class="list-group-item">Password: *****</li>
@@ -20,7 +20,7 @@
 
         <div class="col-lg-4">
           <h2 style="margin-top: 10px">User Information</h2>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 100%;">
             <ul class="list-group list-group-flush">
               <li class="list-group-item">First Name: {{user.firstName}}</li>
               <li class="list-group-item">Last Name: {{user.lastName}}</li>
@@ -34,7 +34,7 @@
 
         <div class="col-lg-4">
           <h2 style="margin-top: 10px">Address</h2>
-          <div class="card" style="width: 18rem;">
+          <div class="card" style="width: 100%;">
             <ul class="list-group list-group-flush">
               <li class="list-group-item" *ngIf="user.address==null">Address: none</li>
               <li class="list-group-item" *ngIf="user.address!=null">Phone Number: {{user.address}}</li>
@@ -47,7 +47,7 @@
     </div>
     </mat-tab>
 
-    <mat-tab label="Your Offers">
+    <mat-tab label="Your Offers"> <div style="padding: 1rem">
       <div class="row">
         <div class="col">
           <h2 style="margin-top: 10px">Your Available Offers</h2>
@@ -62,9 +62,10 @@
           </div>
         </div>
       </div>
+    </div>
     </mat-tab>
 
-    <mat-tab label="Sold">
+    <mat-tab label="Sold"> <div style="padding: 1rem">
       <h2 style="color: rgba(114, 114, 114, 0.658)">Please delete Products you sold and update Services and Products you lent in "Your Offers".</h2>
       <div class="row">
         <div class="col">
@@ -102,11 +103,12 @@
           </div>
         </div>
       </div>
+    </div>
     </mat-tab>
 
 
 
-    <mat-tab label="Bought">
+    <mat-tab label="Bought"> <div style="padding: 1rem">
       <div class="row">
         <div class="col">
           <h2 style="margin-top: 10px">Offers you bought</h2>
@@ -142,7 +144,7 @@
           </div>
         </div>
       </div>
-
+    </div>
     </mat-tab>
 
 
