--- a/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/profile/profile.component.html
@@ -148,13 +148,14 @@
     </mat-tab>
 
 
-    <mat-tab label="Wallet">
+    <mat-tab label="Wallet"> <div style="padding: 1rem">
       <h2 style="margin-top: 10px;">Wallet</h2>
       <div *ngFor="let user of userInfo | async">
         <p>You've got {{user.wallet}} CHF in your Wallet.</p>
         <p *ngIf="user.wallet > 0">Let's buy something!</p>
         <p *ngIf="user.wallet <= 0">Let's try to sell something!</p>
       </div>
+    </div>
     </mat-tab>
 </mat-tab-group>
 </mat-card>
