fixed merge conflicts

--- a/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/product-item/product-item.component.html
@@ -54,12 +54,12 @@
 
      </div>
       <hr>
-      <button type="button" class="btn btn-md btn-info" *ngIf="(userId | async) != product.userId.toString() && (loggedIn | async) && product.status == true && !(isAdmin | async)" (click)="openPurchaseDialog()" style="float:right">Buy</button>
+      <button type="button" class="btn btn-md" *ngIf="(userId | async) != product.userId.toString() && (loggedIn | async) && product.status == true && !(isAdmin | async)" (click)="openPurchaseDialog()" style="float:right; background-color: rgb(116, 153, 255); color: rgb(255, 255, 255);">Buy</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="((userId | async)==product.userId.toString())" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-outline-danger" *ngIf="(product.approved == false && (isAdmin | async))" (click)="onProductDelete(product.productId)" style="float:right">Delete</button>
       <button type="button" class="btn btn-md btn-dark" *ngIf="(isAdmin | async) && !product.approved" (click)="onApprove()" style="float:right">Approve</button>
       <!--<button type="button" class="btn btn-md btn-outline-danger" *ngIf="admin" (click)="onProductDelete(product.productId)" style="float:right">Delete</button> -->
-      <button type="button" class="btn btn-md btn-dark" *ngIf="(userId | async)==product.userId" (click)="change=true" [hidden]="change" style="float:right">Change</button>
+      <button type="button" class="btn btn-md" *ngIf="(userId | async)==product.userId" (click)="change=true" [hidden]="change" style="float:right; background-color: rgb(57, 68, 97); color: rgb(255, 255, 255)">Change</button>
       <div id="change" [hidden]="!change">
         <app-product-update [productTitle]="product.title"
                             [productDescription]="product.description"
