--- a/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
@@ -1,6 +1,6 @@
 <mat-card>
   <div *ngIf="!(loggedIn | async)">
-    <div class="log">Login</div>
+    <h1 style= "margin-left: 1rem">Login </h1>
     <mat-form-field>
       <input matInput placeholder="User Name" [(ngModel)]="userName" name="userName">
     </mat-form-field>
@@ -11,7 +11,7 @@
   </div>
 
   <div *ngIf="loggedIn | async">
-    <div class="log">Logout</div>
+    <h1 style= "margin-left: 1rem">Logout </h1>
     <button mat-flat-button color="warn" (click)="onLogout()">Logout</button>
     You are currently logged in as {{ userName }}
   </div>
