made navbar broader in mobile and changed button colours

--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -77,7 +77,7 @@
     </div>
     <br>
     <div>
-      <button type = "submit" mat-flat-button color="primary" [disabled] = "!createOfferForm.valid">Create Offer</button>
+      <button type = "submit" mat-flat-button style="background-color: rgb(116, 153, 255); color: rgb(255, 255, 255);" [disabled] = "!createOfferForm.valid">Create Offer</button>
     </div>
   </form>
 </mat-card>
