--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.css
@@ -8,3 +8,15 @@
   font-weight: lighter;
 }
 
+
+
+@media (min-width: 1024px){
+
+
+  nav{
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+
+
+}
