--- a/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/user-login/user-login.component.html
@@ -2,13 +2,13 @@
 <mat-card>
   <div *ngIf="!(loggedIn | async)">
     <h1 style= "margin-left: 1rem">Login </h1>
-    <mat-form-field>
+    <mat-form-field style= "padding-left: 1rem; padding-right: 1rem;">
       <input matInput placeholder="User Name" [(ngModel)]="userName" name="userName">
     </mat-form-field>
     <mat-form-field>
       <input matInput placeholder="Password" [(ngModel)]="password" name="password" type="password" (keydown.enter)="onLogin()">
     </mat-form-field>
-    <button mat-flat-button color="primary" (click)="onLogin()" >Login</button>
+    <button mat-flat-button style="background-color: rgb(116, 153, 255); color: rgb(255, 255, 255);" (click)="onLogin()" >Login</button>
   </div>
 
   <div *ngIf="loggedIn | async">
