--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.css
@@ -24,7 +24,14 @@
   margin-left: 5px;
 }
 
+.color {
+  background-color: rgb(116, 153, 255); 
+  color: rgb(255, 255, 255);
+}
 
+mat-form-field{
+  margin-left: 1rem;
+}
 
 @media (max-width: 1024px){
 
