--- a/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/create-offer/create-offer.component.html
@@ -1,10 +1,10 @@
 <hr>
 <mat-card>
   <form [(formGroup)]="createOfferForm" (ngSubmit)="onSubmit()">
-    <h1>Create Offer</h1>
+    <h1  style="margin-left: 1rem">Create Offer</h1>
     <div>
       <div>
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill"  style="margin-left: 1rem">
           <mat-label>Select Type:</mat-label>
           <mat-select matInput formControlName="productOrService">
             <mat-option value="Product">Product</mat-option>
@@ -32,7 +32,7 @@
           <mat-error *ngIf="(description.invalid && description.touched) || description.dirty || description.errors?.required" class="text.danger">Description is required</mat-error>
         </mat-form-field>
 
-        <mat-form-field appearance="fill">
+        <mat-form-field appearance="fill" style="margin-left: 1rem"> 
           <mat-label>Choose a category</mat-label>
           <mat-select formControlName="selectedCategory">
             <mat-option *ngFor="let category of categories" value="{{category}}">
@@ -68,7 +68,7 @@
         </div>
 
       </div>
-      <div class="custom-file">
+      <div class="custom-file"  style="margin-left: 1rem; width: 97%;">
         <input (change)="onFileChange($event)" formControlName = "file" type="file" class="custom-file-input" id="customFile">
         <label class="custom-file-label" for="customFile">Choose Picture</label>
       </div>
@@ -77,7 +77,7 @@
     </div>
     <br>
     <div>
-      <button type = "submit" mat-flat-button style="background-color: rgb(116, 153, 255); color: rgb(255, 255, 255);" [disabled] = "!createOfferForm.valid">Create Offer</button>
+      <button type = "submit" mat-flat-button [disabled] = "!createOfferForm.valid" [class.color] = "createOfferForm.valid">Create Offer</button>
     </div>
   </form>
 </mat-card>
