--- a/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/nav-bar/nav-bar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar fixed-top navbar-expand-lg navbar-light" style="margin-left: 12%; margin-right: 12%; background-color: rgb(226, 230, 241)">
-  <a class="navbar-brand" routerLink="/">Team 10</a>
+  <a class="navbar-brand" routerLink="/"><img class="navbar-brand" src="assets/icons/eduardologo.png" height="80" alt="eduardo-logo"></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
