--- a/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/landing-page/landing-page.component.html
@@ -56,7 +56,7 @@
 
   <h1 style="margin-top: 16px;">Recently added in "sell"</h1>
   <div class="row">
-    <div *ngFor="let product of sellProducts | async">
+    <div *ngFor="let product of products | async">
       <app-product-item [product] = "product"></app-product-item>
     </div>
   </div>
