--- a/ese2020-project-scaffolding-master/frontend/src/app/wishlist/wishlist.component.html
+++ b/ese2020-project-scaffolding-master/frontend/src/app/wishlist/wishlist.component.html
@@ -1,3 +1,7 @@
-<div *ngFor="let product of products | async | wishlistfilter">
-    <app-product-item [product]="product"></app-product-item>
-</div>
+
+  <h1 style="margin-top: 16px;">Your current Wishlist"</h1>
+  <div class="row">
+    <div *ngFor="let product of products | async">
+      <app-product-item [product] = "product"></app-product-item>
+    </div>
+  </div>
